# boilerplate

./: .gitignore  README.md
apiclient/: pyproject.toml
apiclient/src/apiclient/: __init__.py  auth.py  client.py
fastapi/: README.md  pyproject.toml
fastapi/src/app/: auth.py  config.py  database.py  main.py  schemas.py
