[tool.poetry]
name = "apiclient-boilerplate"
version = "0.1.0"
description = "Boilerplate code for an API client that can easily adapt to different api systems"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
